# rust_rest_api

./: Cargo.toml
migrations/2020-12-07-205139_create_user/: up.sql
src/: api_error.rs  db.rs  main.rs  schema.rs
src/user/: mod.rs  model.rs  routes.rs
