[package]
name = "rest_api"
version = "0.1.0"
authors = ["Agris <7924@inbox.lv>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
listenfd = "0.3"
dotenv = "0.11"
log = "0.4"
env_logger = "0.6"
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"]}
diesel = { version = "1.4", features = ["mysql", "r2d2", "uuid", "chrono"]}
diesel_migrations = "1.4"
lazy_static = "1.4"
r2d2 = "0.8"
uuid = { version = "0.6", features = ["serde","v4"]}


